--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,7 +3,8 @@
 }
 .nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  
 }
 .nav-logo {
   display: inline-flex;
@@ -13,7 +14,7 @@
 .nav-list {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   gap: 40px;
 }
 .nav-link {
