--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .header {
   padding: 20px 0;
 }
@@ -42,4 +46,67 @@
 }
 .nav-link.active::after {
   background: #747bff;
+}
+.gallery{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
+
+}
+.gallery-image{
+    width: 360px;
+    height: 200px;
+}
+.gallery-item{
+    margin: 12px;
+}
+.feedback-form{
+border-radius: 8px;
+padding: 24px;
+width: 408px;
+height: 296px;
+display: flex;
+  flex-direction: column;
+  gap: 16px;
+  text-align: left;
+}
+.btn{
+  margin-top: 26px;
+  border-radius: 8px;
+padding: 8px 16px;
+width: 95px;
+height: 40px;
+background-color: #4e75ff;
+font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+letter-spacing: 0.04em;
+color: #fff;
+border: none;
+transition: background-color 250ms ease;
+}
+
+.form-box{
+  width: 360px;
+  height: 192px;
+}
+.input-form{
+  width: 100%;
+  height: 40px;
+}
+.textarea-form{
+  width: 100%;
+  resize: none;
+}
+label{
+  font-weight: 400;
+font-size: 16px;
+line-height: 150%;
+letter-spacing: 0.04em;
+color: #2e2f42;
+margin: 8px 0;
+}
+.btn:hover{
+  background-color:#6c8cff;
 }
